added aws_credentials example file and updated readme

--- a/roles/app/templates/index.html.j2
+++ b/roles/app/templates/index.html.j2
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <h1>Aplicação Nginx provisionada com Ansible</h1>
+    <h1>Aplicação Nginx provisionada com Ansible atualizado</h1>
     <p>{{ app_welcome_message }}</p>
     <div class="info">
       <p><span class="tag">Projeto</span> {{ project_name }}</p>
